/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package pt.ipp.isep.dei.esoft.pot.model;

import java.util.ArrayList;

/**
 *
 * @author Miguel Panda
 */
public class RegistoAnuncio {
    ArrayList ListaAnuncios;

    public ArrayList getListaAnuncios() {
        return ListaAnuncios;
    }
   
   
}